# Redeemer-C2

./: .gitignore  Cargo.toml  README.md  config.yaml
client/: Cargo.toml
client/src/: banner.rs  config.rs  github_server.rs  main.rs  sql.rs
coff/: Cargo.toml
coff/src/: lib.rs
github/: Cargo.toml
github/src/: lib.rs
implant/: Cargo.toml
implant/src/: command.rs  main.rs
