[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
github = { path = "../github" }
tokio = { version = "1.40.0", features = ["full"] }
serde = {version ="1.0.210", features = ["derive"]}
serde_derive = "1.0.210"
serde_json = "1.0.128"
serde_yaml = "0.9.34"
sqlite = "0.36.1"
ansi_term = "0.12.1"
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
get_if_addrs = "0.5.3"
prettytable-rs = "0.10.0"
reqwest = { version = "0.12.7",features = ["json", "blocking", "rustls-tls"], default-features = false }

