[package]
name = "github"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version ="1.0.210", features = ["derive"]}
serde_derive = "1.0.210"
serde_json = "1.0.128"
serde_yaml = "0.9.34"
reqwest = { version = "0.12.7",features = ["json", "blocking", "rustls-tls"], default-features = false }
base64 = "0.22.1"
